Collection API Улучшения[70623#189774]